Add an api to find the fastest route
